# foundation-policy-python

./: .gitignore  .gitmodules  BUILD.md  README.md  build.sh  pyproject.toml  requirements.py
examples/: main.py
foundation_model/: __init__.py
foundation_model/examples/: main.py
foundation_policy/: __init__.py
foundation_policy/examples/: main.py  ui.py
