[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foundation-policy"
version = "1.0.2"
description = "A foundation policy for quadrotor control"
readme = "README.md"
authors = [{name = "Jonas Eschmann", email = "jonas.eschmann@gmail.com"}]
license = {text = "MIT"}
dependencies = [
    "numpy",
    "h5py",
    "importlib_resources" # to support importlib.resources.files() on Python < 3.9
]

[project.optional-dependencies]
examples = [
    "scipy",
    "l2f",
    "websockets"
]

[tool.hatch.build.targets.wheel]
packages = ["foundation_policy"]
include = [
    "foundation_policy/blob/*.h5",
    "foundation_policy/examples/*",
]

[project.urls]
Homepage = "https://github.com/rl-tools/foundation-policy"